[gd_scene load_steps=2 format=3 uid="uid://cerisxl6w3d2x"]

[ext_resource type="Script" uid="uid://buxa8qxhpem66" path="res://debug/debug_ui.gd" id="1_uym8b"]

[node name="DebugUI" type="VBoxContainer"]
offset_right = 156.0
offset_bottom = 370.0
script = ExtResource("1_uym8b")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2

[node name="Add20Money" type="Button" parent="GridContainer"]
layout_mode = 2
text = "+$20"

[node name="ResetMoney" type="Button" parent="GridContainer"]
layout_mode = 2
text = "$ = 0"

[node name="GridContainer2" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="WeakenBoss" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "Enimy HP = 1"

[node name="WeakenUnit" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "HP = 1"

[node name="SubHP" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "HP -1"

[node name="AddHP" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "HP +1"

[node name="AddBaseStat" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "STAT + 1"

[node name="SubBaseStat" type="Button" parent="GridContainer2"]
layout_mode = 2
text = "STAT - 1"

[node name="UnitID" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="SpawnUnit" type="Button" parent="."]
layout_mode = 2
text = "Spawn"

[node name="RemoveUnit" type="Button" parent="."]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="GridContainer/Add20Money" to="." method="_on_add_20_money_pressed"]
[connection signal="pressed" from="GridContainer/ResetMoney" to="." method="_on_reset_money_pressed"]
[connection signal="pressed" from="GridContainer2/WeakenBoss" to="." method="_on_weaken_boss_pressed"]
[connection signal="pressed" from="GridContainer2/WeakenUnit" to="." method="_on_weaken_unit_pressed"]
[connection signal="pressed" from="GridContainer2/SubHP" to="." method="_on_sub_hp_pressed"]
[connection signal="pressed" from="GridContainer2/AddHP" to="." method="_on_add_hp_pressed"]
[connection signal="pressed" from="GridContainer2/AddBaseStat" to="." method="_on_add_base_stat_pressed"]
[connection signal="pressed" from="GridContainer2/SubBaseStat" to="." method="_on_sub_base_stat_pressed"]
[connection signal="item_selected" from="UnitID" to="." method="_on_unit_id_item_selected"]
[connection signal="pressed" from="SpawnUnit" to="." method="_on_spawn_unit_pressed"]
[connection signal="pressed" from="RemoveUnit" to="." method="_on_remove_unit_pressed"]
